results/SVCOMP/4-shot/log-charArray-2024_03_18_10_12_23.txt
public class charArray {
  //@ requires c != null;
  //@ requires c.length > 0;
  //@ ensures \result == c;
  public static char[] f(char c[]) {
    if (c != null && c.length > 0) {
      c[0] = 's';
    }
    return c;
  }

  //@ requires arg != null;
  //@ requires arg.length() == 5;
  //@ ensures \result == 1 <==> fun_postcondition(arg) == 1;
  //@ ensures \result == 0 <==> fun_postcondition(arg) == 0;
  public static int fun(String arg) {
    if (arg.length() != 5) return -1;
    char[] c = f(arg.toCharArray());
    String s = new String("HELLO") + new String(c, 0, c.length);
    return (s.charAt(5) == 's') ? 1 : 0;
  }

  //@ requires arg != null;
  //@ requires arg.length() == 5;
  //@ ensures \result == 1 <==> s.charAt(5) == 's';
  //@ ensures \result == 0 <==> s.charAt(5) != 's';
  public static int fun_postcondition(String arg) {
    char[] c = f(arg.toCharArray());
    String s = new String("HELLO") + new String(c, 0, c.length);
    return (s.charAt(5) == 's') ? 1 : 0;
  }
}
/home/max/Documents/JMLGPT/tmp/charArray.java:25: error: cannot find symbol
  //@ ensures \result == 1 <==> s.charAt(5) == 's';
                                ^
  symbol:   variable s
  location: class charArray
/home/max/Documents/JMLGPT/tmp/charArray.java:26: error: cannot find symbol
  //@ ensures \result == 0 <==> s.charAt(5) != 's';
                                ^
  symbol:   variable s
  location: class charArray
2 errors

